--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.example</groupId>
     <artifactId>TypeShii</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>TypeShi</name>
+    <name>TypeShii</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
