--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.12.1</junit.version>
 
-        <!-- JavaFX settings -->
         <javafx.version>21.0.6</javafx.version>
-        <javafx.platform>win</javafx.platform> <!-- win / linux / mac -->
+        <javafx.platform>win</javafx.platform>
     </properties>
 
     <dependencies>
